# Chrome-Extension

./: .gitignore  ACTION_PARSING_DOCUMENTATION.md  ACTION_PARSING_IMPROVEMENT_PLAN.md  ARCHITECTURE_DIAGRAMS.md  CODEBASE_OVERVIEW.md  COMPONENT_LOGGING_REFERENCE.md  EXPLORATION_SUMMARY.md  GEMBRAIN_IMPROVEMENT_PLAN.md  LICENSE  LOGGING_GUIDE.md  MIGRATION_GUIDE.md  PLAN.md  QUICK_REFERENCE.md  README.md  REFACTORING_PLAN.md  REFACTOR_SUMMARY.md  migrate_db.py  pyproject.toml  requirements.txt  run.py
gembrain/: main.py
gembrain/agents/: code_api.py  code_executor.py  gemini_client.py  iterative_reasoner.py  orchestrator.py  prompts.py  state_manager.py  tools.py
gembrain/automation/: engine.py  rules.py
gembrain/config/: defaults.py  manager.py  models.py
gembrain/core/: db.py  models.py  repository.py  services.py
gembrain/ui/: app.py  main_window.py
gembrain/ui/styles/: base.qss
gembrain/ui/widgets/: chat_panel.py  collapsible_box.py  context_panel.py  conversation_view.py  datavault_panel.py  goals_panel.py  memory_panel.py  notes_panel.py  projects_panel.py  settings_dialog.py  status_bar.py  tasks_panel.py  technical_details_view.py  vault_panel.py
gembrain/utils/: datavault_tags.py  json_utils.py  logging.py  paths.py  time.py
tests/: test_action_parsing.py  test_datavault_tags.py
